// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render a form tag 1`] = `
<form
  class="form"
>
  <div
    class="grid"
  />
  <button
    class="submit"
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`Should render field types based on schema 1`] = `
<form
  class="form"
>
  <div
    class="grid"
  >
    <div
      class="item"
      style="width:100%;margin-left:0%;margin-right:0%;"
    >
      <div
        class="field"
      >
        <label
          class="label"
        >
          Text
        </label>
        <input
          type="text"
        />
      </div>
    </div>
    <div
      class="item"
      style="width:100%;margin-left:0%;margin-right:0%;"
    >
      <div
        class="field"
      >
        <label
          class="label"
        >
          Datetime
        </label>
        <input
          type="datetime"
        />
      </div>
    </div>
  </div>
  <button
    class="submit"
    type="submit"
  >
    Submit
  </button>
</form>
`;
